// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ClientApp]  LoginBanner Component should match snapshot for code login only 1`] = `
<div
  className=" mt--0 mb--0 sign-in-banner"
  data-qa-sel="sign-in-banner"
  id="loginBanner"
>
  <div
    className="container"
  >
    <div
      className="LoginBanner"
      role="form"
    >
      <div
        className="input"
      >
        <div
          className="input limitWidth input__input"
        >
          <label
            className="input__label"
            htmlFor="orgCode-undefined"
          >
            Enter your organisation code
          </label>
          <input
            className="input__input"
            data-qa-sel="OrganisationCodeLogin"
            id="orgCode-undefined"
            name="orgCode-undefined"
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`[ClientApp]  LoginBanner Component should match snapshot for idam login and in comments panel 1`] = `
<div
  className=" mt--0 mb--0 sign-in-banner"
  data-qa-sel="sign-in-banner"
  id="loginBanner"
>
  <div
    className="container"
  >
    <div
      className="LoginBanner"
      role="form"
    >
      <h3>
        Some title
      </h3>
      <p
        className=""
      >
        <a
          href="/signin-url"
          title="Sign in to your NICE account"
        >
          Sign in to your NICE account
        </a>
         
        to comment on this consultation
        .
         
      </p>
      <p
        className=""
      >
        <a
          href="/register-url"
          title="Register for a NICE account"
        >
          Register
        </a>
         
        for a NICE account if you don't already have one.
      </p>
    </div>
  </div>
</div>
`;

exports[`[ClientApp]  LoginBanner Component should match snapshot for idam login and not in comments panel 1`] = `
<div
  className="panel panel-white mt--0 mb--0 sign-in-banner"
  data-qa-sel="sign-in-banner"
  id="loginBanner"
>
  <div
    className="container"
  >
    <div
      className="LoginBanner"
      role="form"
    >
      <p
        className="display--inline"
      >
        <a
          href="/signin-url"
          title="Sign in to your NICE account"
        >
          Sign in to your NICE account
        </a>
         
        signin text
        .
         
      </p>
      <p>
        <a
          className="btn"
          href="/signin-url"
          title="Sign in to your NICE account"
        >
          Sign in
        </a>
      </p>
      <p
        className="display--inline"
      >
        <a
          href="/register-url"
          title="Register for a NICE account"
        >
          Register
        </a>
         
        for a NICE account if you don't already have one.
      </p>
    </div>
  </div>
</div>
`;
